# AI-Exel-analyzer

./: README.md  excel.py  main.py  open_ai.py  pyproject.toml
