[project]
name = "analyzer-ai-arise"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "pyxlsb>=1.0.10",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "xlwings>=0.33.15",
]
